[package]
name = "containering-a-docker-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"

# to add html templating
actix-files = "0.5"

# to make a custom object to hold the data for the html template
serde = "1.0.198"

# for static file serving
handlebars = { version = "3", features = ["dir_source"]}
